Grav: fixed filter styling misaligning in Firefox (fixes #1686)

--- a/platforms/common/css-compiled/g-admin.css
+++ b/platforms/common/css-compiled/g-admin.css
@@ -1904,18 +1904,6 @@
   display: none;
   visibility: hidden;
 }
-#g5-container .visible-phone {
-  display: none !important;
-}
-#g5-container .visible-tablet {
-  display: none !important;
-}
-#g5-container .hidden-desktop {
-  display: none !important;
-}
-#g5-container .visible-desktop {
-  display: inherit !important;
-}
 @media print {
   #g5-container .visible-print {
     display: inherit !important;
@@ -3138,6 +3126,7 @@ i.fa-gantry, i.fa-gantry-logo, i.fa-gantry-symbol, i.fa-gantry-logo-both, i.fa-g
 }
 #g5-container .g-panel-filters .search, #g5-container .g-panel-filters input, #g5-container .g-panel-filters .button {
   font-size: 0.85rem;
+  display: inline-block;
 }
 #g5-container .g-filters-bar label, #g5-container .g-filters-bar a {
   display: inline-block;
