--- a/platforms/common/scss/admin/_settings.scss
+++ b/platforms/common/scss/admin/_settings.scss
@@ -274,6 +274,7 @@
 
     .search, input, .button {
         font-size: 0.85rem;
+        display: inline-block;
     }
 }
 
